# espadeiro.pt

./: .gitignore  .gitmodules  .prettierrc  Cargo.toml  Gemfile  _config.yml  _redirects  astro.config.mjs  config.toml  default.nix  flake.nix  gatsby-config.js  gatsby-node.js  gemset.nix  package-lock.json  package.json  shell.nix  tailwind.config.js  tailwind.config.mjs  tailwind.css  tsconfig.json  update_gems.sh  vercel.json  wrangler.toml
_posts/: 2020-12-27-coding-a-snake-clone.md  2021-12-27-implementing-an-ecs-part-one.md  2021-12-27-implementing-an-ecs-part-three.md  2021-12-27-implementing-an-ecs-part-two.md
_projects/: 100stepdungeon.md  bridgeman.md  guessthenumber.md  losttreasuredigger.md
content/: _index.md
layouts/: index.html
old/: config.toml
posts/: coding-a-snake-clone.md  crafting_01_introduction.md  crafting_02_a_map_of_the_territory.md  crafting_03_the_lox_language.md  crafting_04_scanner.md  crafting_05_representing_code.md  crafting_06_parsing_expressions.md  crafting_07_evaluating_expressions.md  crafting_08_statements_and_state.md  crafting_09_control_flow.md  crafting_10_functions.md  crafting_11_resolving_and_binding.md  crafting_12_classes.md  crafting_13_inheritance.md  crafting_14_chunks_of_bytecode.md  crafting_15_a_virtual_machine.md  crafting_16_scanning_on_demand.md  crafting_17_compiling_expressions.md  crafting_18_types_of_values.md  crafting_19_strings.md  crafting_20_hash_tables.md  crafting_21_global_variables.md  crafting_22_local_variables.md  crafting_23_jumping_back_and_forth.md  crafting_24_calls_and_functions.md  (+3 more)
(+92 files in other folders)
