[package]
name = "espadeiro_pt"
version = "6.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
comrak = "0.47.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
rss = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
toml = "0.9.8"
