[package]
name = "espadeiro_pt"
version = "6.1.2"
edition = "2024"

[dependencies]
time = { version = "0.3.36", features = ["macros", "formatting", "serde", "parsing"] }
comrak = "0.47.0"
ureq = { version = "3.1.2", features = ["json"] }
rss = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
toml = "0.9.8"
